k8s-related/ingress/host-based/reactjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactjs-deployment
spec:
  selector:
    matchLabels:
      app: reactjs-deployment
  template:
    metadata:
      labels:
        app: reactjs-deployment
    spec:
      containers:
        - name: reactjs-deployment
          image: 69966/earthdx:78
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
