k8s-related/ingress/host-based/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-nginx.piseth.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
  - host: ingress-reactjs.piseth.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: reactjs-service
            port: 
              number: 80
